Fixed output getting cut off by inputbox

--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
   overflow: auto;
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 90%;
   top: 0;
   z-index: -1;
 }
